fixing frame background
the header frame was getting cut off on the top and bottom

--- a/src/main.scss
+++ b/src/main.scss
@@ -34,7 +34,7 @@ main {
       background-size: 100%;
       background-repeat: no-repeat;
       background-position: center;
-      padding: 16%;
+      padding: 17%;
       font-size: 9vw;
       text-align: center;
       width: 100%;
